[gd_scene load_steps=8 format=1]

[ext_resource path="res://menu/game_menu.gd" type="Script" id=1]
[ext_resource path="res://menu/restart-button.tex" type="Texture" id=2]
[ext_resource path="res://menu/pause-button.tex" type="Texture" id=3]
[ext_resource path="res://font/GamePause.fnt" type="BitmapFont" id=4]
[ext_resource path="res://menu/score_panel.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]

resource/name = "btnRestart_dissapear"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ControlButton/btnRestart:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }

[sub_resource type="Animation" id=2]

resource/name = "btnRestart_reapear"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ControlButton/btnRestart:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }

[node name="game_menu" type="Control"]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 0.0
margin/right = 60.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="ControlButton" type="HBoxContainer" parent="."]

editor/display_folded = true
anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -556.0
margin/top = 12.0
margin/right = -664.0
margin/bottom = 58.0
alignment = 0
__meta__ = { "_edit_lock_":true }

[node name="btnRestart" type="Button" parent="ControlButton"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 52.0
margin/bottom = 46.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 2 )
flat = true

[node name="btnPause" type="Button" parent="ControlButton"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 56.0
margin/top = 0.0
margin/right = 108.0
margin/bottom = 46.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 3 )
flat = true

[node name="lblGamePause" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 168.0
margin/top = 176.0
margin/right = 529.0
margin/bottom = 231.0
custom_fonts/font = ExtResource( 4 )
text = "GAME PAUSED"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

process/pause_mode = 2
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/btnRestart_dissapear = SubResource( 1 )
anims/btnRestart_reapear = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="ScorePanel" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="ControlButton/btnRestart" to="." method="_on_btnRestart_pressed"]

[connection signal="pressed" from="ControlButton/btnPause" to="." method="_on_btnPause_pressed"]

[connection signal="released" from="ControlButton/btnPause" to="." method="_on_btnPause_released"]


